<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Register">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="993dp"
        android:layout_height="882dp"
        android:layout_marginBottom="81dp"
        android:src="@drawable/rectangle"
        android:translationX="130dp"
        android:translationY="-232dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009999999999999999" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            android:padding="42dp"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="180dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/edit_text"
                android:hint="@string/username" />

            <EditText
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/edit_text"
                android:hint="@string/password" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:text="@string/register"
                android:onClick="register"
                app:cornerRadius="25dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="already have an account?"
                    android:textColor="#FFF" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:onClick="login"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:layout_width="209dp"
            android:layout_height="62dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="62dp"
            app:srcCompat="@drawable/youcloths" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:src="@drawable/google" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:src="@drawable/fb" />

        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>